--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.gyc</groupId>
     <artifactId>spring-boot-g</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring-boot-helloworld</module>
+    </modules>
 
 
 </project>
