修改配置内容

--- a/spring-boot-rabbitmq/src/main/resources/application.properties
+++ b/spring-boot-rabbitmq/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # port
 server.port=8379
 # application name
-spring.application.name=HelloWorld
+spring.application.name=rabbitmq
 
 ###### RabbitMQ config ######
 spring.rabbitmq.host=localhost
