修改配置文件

--- a/spring-boot-helloworld/src/main/resources/application.properties
+++ b/spring-boot-helloworld/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# port
-server.port=8379
-# application name
-spring.application.name=HelloWorld
+## port
+#server.port=8379
+## application name
+#spring.application.name=HelloWorld
